--- a/GestorTareasApp/res/layout/activity_alarm.xml
+++ b/GestorTareasApp/res/layout/activity_alarm.xml
@@ -65,7 +65,7 @@
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textViewEficiente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/txtHoraTarea"
