--- a/GestorTareasApp/res/layout/activity_nueva_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_nueva_tarea.xml
@@ -3,32 +3,41 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@drawable/f2"
+    android:background="@drawable/f2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.gestortareasapp.NuevaTarea" >
 
-    <TableLayout
+    <LinearLayout
+        android:id="@+id/LinearLayout1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
         <TableRow
             android:id="@+id/tableRow1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <EditText
-                android:id="@+id/editTextDescripcion"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Descipcion" >
+                android:orientation="vertical" >
 
-                <requestFocus />
-            </EditText>
+                <EditText
+                    android:id="@+id/editTextDescripcion"
+                    android:layout_width="286dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10" />
 
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="                        Descripcion de la Tarea" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
@@ -36,13 +45,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <EditText
-                android:id="@+id/editTextComentario"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="Comentario" />
+                android:orientation="vertical" >
 
+                <EditText
+                    android:id="@+id/editTextComentario"
+                    android:layout_width="283dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10" >
+
+                    <requestFocus />
+                </EditText>
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="                         Escriba un comentario" />
+            </LinearLayout>
         </TableRow>
 
         <TableRow
@@ -59,16 +81,21 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Fecha Inicio" />
+                    android:text="   Fecha Inicio   " />
 
                 <Button
                     android:id="@+id/buttonHoraInicioo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Hora Inicio" />
+                    android:text="  Hora Inicio  " />
             </LinearLayout>
-
         </TableRow>
+
+        <TextView
+            android:id="@+id/textViewTotal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="                      Fecha Inicio - Hora Inicio" />
 
         <TableRow
             android:id="@+id/tableRow4"
@@ -86,62 +113,83 @@
                     android:layout_weight="1"
                     android:minHeight="48dip"
                     android:minWidth="64dp"
-                    android:text="Fecha Fin" />
+                    android:text="    Fecha Fin      " />
 
                 <Button
                     android:id="@+id/buttonHoraFinn"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.64"
-                    android:text="Hora Fin" />
+                    android:text="   Hora Fin     " />
             </LinearLayout>
-
         </TableRow>
+
+        <TextView
+            android:id="@+id/textViewEficiente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="                         Fecha Fin - Hora Fin" />
 
         <TableRow
             android:id="@+id/tableRow5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="                     " />
+
             <Spinner
                 android:id="@+id/spinnerPersona"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
         </TableRow>
+
+        <TextView
+            android:id="@+id/textViewAtrasada"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="                               Empleado" />
 
         <TableRow
             android:id="@+id/tableRow6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="                     " />
+
             <Spinner
                 android:id="@+id/spinnerTipoTarea"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-
         </TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow8"
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="                               Nivel de Tarea" />
+
+        <Button
+            android:id="@+id/btn_notificacion"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-
-            <Button
-                android:id="@+id/btn_notificacion"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="onAgregarArchivo"
-                android:text="Agregar Archivo" />
-
-        </TableRow>
+            android:layout_height="wrap_content"
+            android:onClick="onAgregarArchivo"
+            android:text="            Agregar Archivo            " />
 
         <TableRow
             android:id="@+id/tableRow7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" >
 
-            <LinearLayout
+            <RelativeLayout
+                android:id="@+id/RelativeLayout1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
 
@@ -149,20 +197,24 @@
                     android:id="@+id/buttonBuscarTarea"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentTop="true"
                     android:onClick="onGuardar"
-                    android:text="GUARDAR" />
+                    android:text="Guardar " />
 
                 <Button
                     android:id="@+id/buttonTRCancelar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_alignBaseline="@+id/buttonBuscarTarea"
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentTop="true"
+                    android:layout_toRightOf="@+id/buttonBuscarTarea"
                     android:layout_weight="0.72"
                     android:onClick="onCancelar"
-                    android:text="CANCELAR" />
-            </LinearLayout>
-
+                    android:text=" Cancelar " />
+            </RelativeLayout>
         </TableRow>
-
-    </TableLayout>
+    </LinearLayout>
 
 </ScrollView>
