--- a/GestorTareasApp/res/layout/activity_eficiencia_general.xml
+++ b/GestorTareasApp/res/layout/activity_eficiencia_general.xml
@@ -10,7 +10,7 @@
     tools:context="com.example.gestortareasapp.EficienciaGeneral" >
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textViewEficienciaPorc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -43,7 +43,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@+id/TextView02"
-        android:layout_alignLeft="@+id/textView2"
+        android:layout_alignLeft="@+id/textViewEficienciaPorc"
         android:layout_marginBottom="32dp"
         android:text="Tareas Realizadas"
         android:textAppearance="?android:attr/textAppearanceMedium" />
@@ -61,7 +61,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/textViewDescripcionEficiencia"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textViewNombreList"
@@ -85,7 +85,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignRight="@+id/Button01"
-        android:layout_below="@+id/textView1"
+        android:layout_below="@+id/textViewDescripcionEficiencia"
         android:layout_marginTop="16dp"
         android:text="Large Text"
         android:textAppearance="?android:attr/textAppearanceLarge" />
