--- a/GestorTareasApp/res/layout/activity_eficiencia_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_eficiencia_tarea.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
       android:background="@drawable/f2"
+      
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -22,7 +23,7 @@
             android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewDescripcionEficiencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/textViewNombreList"
@@ -30,18 +31,17 @@
             android:layout_marginTop="45dp"
             android:text="Buscar Tarea"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#ba5202" />
+            />
 
         <Button
             android:id="@+id/Button02"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textViewNombreList"
-            android:layout_below="@+id/textView1"
+            android:layout_below="@+id/textViewDescripcionEficiencia"
             android:layout_marginLeft="21dp"
             android:layout_marginTop="38dp"
-            android:text="BUSCAR"
-            android:textColor="#ba5202" />
+            android:text="BUSCAR" />
 
         <EditText
             android:id="@+id/editTextN"
