--- a/GestorTareasApp/res/layout/activity_nueva_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_nueva_tarea.xml
@@ -33,7 +33,7 @@
                     android:ems="10" />
 
                 <TextView
-                    android:id="@+id/textView1"
+                    android:id="@+id/textViewDescripcionEficiencia"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="                        Descripcion de la Tarea" />
@@ -60,7 +60,7 @@
                 </EditText>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/textViewEficienciaPorc"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="                         Escriba un comentario" />
