--- a/GestorTareasApp/res/layout/activity_tarea_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_tarea_realizada.xml
@@ -34,7 +34,7 @@
         android:layout_height="wrap_content" >
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/textViewDescripcionEficiencia"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Descripcion"
