--- a/GestorTareasApp/res/layout/activity_alarm.xml
+++ b/GestorTareasApp/res/layout/activity_alarm.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+      android:background="@drawable/f2"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,7 +16,8 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="28dp"
-        android:text="Stop" />
+        android:text="Stop"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textViewDescripcionEficiencia"
