--- a/GestorTareasApp/res/layout/activity_eficiencia_tarea.xml
+++ b/GestorTareasApp/res/layout/activity_eficiencia_tarea.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-      android:background="@drawable/f2"
+      android:background="@drawable/f3"
       
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -34,7 +34,7 @@
             />
 
         <Button
-            android:id="@+id/Button02"
+            android:id="@+id/ButtonEficienciaTareaEmpleado"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignLeft="@+id/textViewNombreList"
@@ -47,7 +47,7 @@
             android:id="@+id/editTextN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/Button02"
+            android:layout_below="@+id/ButtonEficienciaTareaEmpleado"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="26dp"
             android:ems="10" >
@@ -56,7 +56,7 @@
         </EditText>
 
         <Button
-            android:id="@+id/Button01"
+            android:id="@+id/ButtonTareaRealizada"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignRight="@+id/textViewNombreList"
