--- a/GestorTareasApp/res/layout/activity_login.xml
+++ b/GestorTareasApp/res/layout/activity_login.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-     android:background="@drawable/f2"
+     android:background="@drawable/f3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -51,7 +51,7 @@
      android:layout_height="80px"
      android:layout_gravity="center"
      android:layout_marginTop="30px"
-     android:hint="        User"
+     android:hint="        Usuario"
      android:textStyle="bold" />
  
 <EditText
@@ -59,7 +59,7 @@
     android:layout_width="440px"
     android:layout_height="80px"
     android:layout_gravity="center"
-    android:hint="   Password"
+    android:hint="   Contraseña"
     android:inputType="textPassword"
     android:textStyle="bold" />
 
@@ -69,7 +69,7 @@
     android:layout_height="80px"
     android:layout_gravity="center"
     android:onClick="onLogin"
-    android:text="INICIAR"
+    android:text="Iniciar Sesión"
     android:textAlignment="center" />
 
 <Button
@@ -77,7 +77,7 @@
     android:layout_width="440px"
     android:layout_height="80px"
     android:onClick="onRegister"
-    android:text="CREAR CUENTA"
+    android:text="No tiene Cuenta, Registrese"
     android:textAlignment="center" />
  
 </LinearLayout>
