--- a/GestorTareasApp/res/layout/activity_main.xml
+++ b/GestorTareasApp/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/f2"
+    android:background="@drawable/f3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -47,7 +47,7 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentRight="true"
             android:onClick="onRealizarTareas"
-            android:text="Realizar Tarea" />
+            android:text="Gestor Tarea" />
 
         <ImageView
             android:id="@+id/imageViewVisto"
