--- a/GestorTareasApp/res/layout/activity_tarea_pendiente.xml
+++ b/GestorTareasApp/res/layout/activity_tarea_pendiente.xml
@@ -3,12 +3,12 @@
     android:id="@+id/ScrollView1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@drawable/f3"
+    android:background="@drawable/f3"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gestortareasapp.BuscarTarea" >
+    tools:context="com.example.gestortareasapp.TareaPendiente" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content" >
 
             <EditText
-                android:id="@+id/editTextCriterioBusqueda"
+                android:id="@+id/editText1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -30,18 +30,17 @@
             </EditText>
 
             <Button
-                android:id="@+id/buttonBuscarTarea"
-                android:layout_width="116dp"
+                android:id="@+id/button1"
+                android:layout_width="104dp"
                 android:layout_height="wrap_content"
-                android:onClick="onBuscarTarea"
-                android:text="Button" />
+                android:text="Buscar" />
 
         </LinearLayout>
 
         <ListView
-            android:id="@+id/listViewTareas"
+            android:id="@+id/listViewTareaRealizadas"
             android:layout_width="match_parent"
-            android:layout_height="439dp" >
+            android:layout_height="384dp" >
         </ListView>
 
     </LinearLayout>
