--- a/GestorTareasApp/res/layout/activity_tareas.xml
+++ b/GestorTareasApp/res/layout/activity_tareas.xml
@@ -3,7 +3,7 @@
     android:id="@+id/LinearLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-     android:background="@drawable/f2"
+     android:background="@drawable/f3"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
@@ -69,7 +69,7 @@
             android:layout_below="@+id/button4"
             android:layout_marginTop="30dp"
             android:onClick="onSalir"
-            android:text="SALIR" />
+            android:text="Salir" />
 
         <Button
             android:id="@+id/buttonFecha"
