--- a/GestorTareasApp/res/layout/activity_buscar_tarea_empleado_realizada.xml
+++ b/GestorTareasApp/res/layout/activity_buscar_tarea_empleado_realizada.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gestortareasapp.TareaPendiente" >
+    tools:context="com.example.gestortareasapp.BuscarTareaEmpleadoRealizado" >
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
             android:layout_height="wrap_content" >
 
             <EditText
-                android:id="@+id/editText1"
+                android:id="@+id/editTextDescripcTareaAtrasadaa"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -33,6 +33,7 @@
                 android:id="@+id/button1"
                 android:layout_width="104dp"
                 android:layout_height="wrap_content"
+                android:onClick="OnBuscar"
                 android:text="Buscar" />
 
         </LinearLayout>
