--- a/GestorTareasApp/res/layout/activity_eficiencia_templeado.xml
+++ b/GestorTareasApp/res/layout/activity_eficiencia_templeado.xml
@@ -1,6 +1,5 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/RelativeLayout1"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/f3"
@@ -8,9 +7,9 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gestortareasapp.BuscarEficiencia" >
+    tools:context="com.example.gestortareasapp.EficienciaTEmpleado" >
 
-    <LinearLayout
+     <LinearLayout
         android:id="@+id/linearLayout1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" >
@@ -33,10 +32,11 @@
         android:orientation="vertical" >
 
         <ListView
-            android:id="@+id/listViewEficiencia"
-            android:layout_width="286dp"
-            android:layout_height="428dp" >
+            android:id="@+id/listViewEficienciaEmpleadoo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
         </ListView>
+
     </LinearLayout>
 
     <TextView
@@ -49,5 +49,6 @@
         android:text="Nivel"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold" />
-
+    
+    
 </RelativeLayout>
