--- a/GestorTareasApp/res/layout/activity_menu_eficiencia_empleado.xml
+++ b/GestorTareasApp/res/layout/activity_menu_eficiencia_empleado.xml
@@ -7,7 +7,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.gestortareasapp.EficienciaActivity" >
+    tools:context="com.example.gestortareasapp.MenuEficienciaEmpleado" >
 
     <TextView
         android:id="@+id/textViewNombreList"
@@ -53,3 +53,4 @@
         android:text="GENERAL" />
 
 </RelativeLayout>
+
